fix: support root-relative paths and verify jpeg parsing

--- a/input/test_vw.html
+++ b/input/test_vw.html
@@ -1,6 +1,7 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
-<body>
-    <img src="test.png" alt="VW Test">
-</body>
+  <body>
+    <img src="../test.jpg" alt="VW Test" />
+    <img src="../test.png" alt="" />
+  </body>
 </html>
